kustomization/overlays/prod/unifi-syslog/networkpolicy/allow-to-loki.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-loki-networkpolicy
  namespace: unifi-syslog
spec:
  egress:
    - ports:
        - port: 3100
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: alloy
      app.kubernetes.io/name: alloy
  policyTypes:
    - Egress
